# matrix

./: .gitignore  Cargo.toml  Config.toml  README.md  build.cmd  build.rs  build.sh  run.cmd
src/: app.rs  characters.rs  config.rs  icon.rs  main.rs  setting.rs
ui/: setting.slint
