[package]
name = "matrix"
version = "1.0.0"
edition = "2021"

[dependencies]
raqote = { git="https://github.com/jrmuizel/raqote" }
font-kit = "0.10"
anyhow = "1"
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
toml = "0.5.8"
csscolorparser = "0.5.0"
winit = "0.26.1"
winit_input_helper = "0.11"
image = "0.24.1"
softbuffer = "0.1.0"
fast_image_resize = "0.7.0"

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'