[package]
name = "matrix"
version = "1.0.5"
description = "代码雨"
authors = ["Jia Ye <planet0104@gmail.com>"]
license = "MIT"
repository = "https://github.com/planet0104/matrix"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
toml = "0.5.8"
csscolorparser = "0.5.0"
slint = "0.2.1"
dirs = "4.0.0"
notify = "5.0.0-pre.14"
temp-dir = "0.1.11"
app_dirs = { package = "app_dirs2", version = "2.3" }
once_cell = "1.10.0"
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
rusttype = "0.9.2"

[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'